test/Fail/Issue7678/Issue7678.agda
-- Andreas, 2025-01-15, issue #7678
-- Disallow several library files in one directory.
